--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   geolocator: ^6.0.0
   permission_handler: ^5.0.1+1
   intl: ^0.16.1
+  sunrise_sunset: "^1.0.2"
 
 dev_dependencies:
   flutter_test:
@@ -52,7 +53,9 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - giff/
+    - gifAfterNoon/
+    - gifNight/
+    - images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
