--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.1+2
+version: 1.0.4+5
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
@@ -34,7 +34,9 @@ dependencies:
   geolocator: ^6.0.0
   permission_handler: ^5.0.1+1
   intl: ^0.16.1
-  sunrise_sunset: "^1.0.2"
+  firebase_admob: ^0.10.1
+
+
 
 dev_dependencies:
   flutter_test:
